# ChangeLog for dev-python/gtksourceview-python
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.44 2010/11/05 23:15:03 pacho Exp $

*gtksourceview-python-2.32.0 (05 Nov 2010)

  05 Nov 2010; Pacho Ramos <pacho@gentoo.org>
  +gtksourceview-python-2.32.0.ebuild:
  Version bump for Gnome 2.32.

  14 Oct 2010; Markus Meier <maekke@gentoo.org>
  gtksourceview-python-2.30.2.ebuild:
  arm stable, bug #324077

  11 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gtksourceview-python-2.26.0.ebuild:
  Clean up old revisions.

  09 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gtksourceview-python-2.30.2.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  gtksourceview-python-2.30.2.ebuild:
  Marked ppc for bug #324077.

  08 Sep 2010; Brent Baude <ranger@gentoo.org>
  gtksourceview-python-2.28.0.ebuild:
  Marking gtksourceview-python-2.28.0 ppc64 stable for bug 320247

  07 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  gtksourceview-python-2.28.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #320247

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  gtksourceview-python-2.30.2.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  gtksourceview-python-2.30.2.ebuild:
  amd64 stable, bug 324077

  20 Jul 2010; Markus Meier <maekke@gentoo.org>
  gtksourceview-python-2.28.0.ebuild:
  arm stable, bug #320247

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  gtksourceview-python-2.26.0.ebuild, gtksourceview-python-2.28.0.ebuild,
  gtksourceview-python-2.30.2.ebuild:
  Drop HPPA keywording (bug #324511).

  11 Jul 2010; Pacho Ramos <pacho@gentoo.org>
  -gtksourceview-python-2.24.1.ebuild, gtksourceview-python-2.26.0.ebuild:
  Drop hppa keywords and old versions per bug 324511

*gtksourceview-python-2.30.2 (14 Jun 2010)

  14 Jun 2010; Pacho Ramos <pacho@gentoo.org>
  +gtksourceview-python-2.30.2.ebuild: